Ajout de quelques images de faire part

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -143,3 +143,12 @@ div.article{
 div.row{
     margin-top: 10px;
 }
+
+
+/* Image faire part */
+img.fairePart {
+    margin-top:20px;
+    margin-bottom:10px;
+}
+
+
