--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -1,1 +1,4 @@
-<p>This is the portfolio view.</p>
+<div class="container">
+	<img src="images/jeanElodie.png" class="img-thumbnail fairePart"/>
+	<img src="images/jeanElodieVerso.png" class="img-thumbnail fairePart"/>
+</div>
