--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -146,9 +146,11 @@ div.row{
 
 
 /* Image faire part */
-img.fairePart {
+div.fairePart {
     margin-top:20px;
     margin-bottom:10px;
 }
 
-
+body {
+    background: #F7F5F5;
+}
