Ajout texte Elodie

--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -1,43 +1,20 @@
 <div class="container">
-  <section id="presentation" class="section">
-    <div class="row">
-      <div class="col-md-8 article">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas posuere leo libero, vel egestas odio ultrices lacinia. Vestibulum congue, dui varius sollicitudin eleifend, turpis leo aliquam metus, a facilisis magna augue sit amet lacus. Proin ultricies aliquet urna, vitae bibendum augue iaculis eget. Suspendisse ac massa vulputate, venenatis nunc sed, pretium magna. Morbi consequat orci sed rhoncus dictum. Suspendisse gravida quam magna, id pharetra arcu feugiat non. Duis ac consectetur felis, ac sodales tellus. Morbi augue lorem, posuere mollis enim ut, euismod sodales quam. Vivamus cursus magna non dapibus tristique. Pellentesque ac mi quis ante convallis accumsan. Donec rhoncus ut turpis nec feugiat. Duis adipiscing metus eget magna viverra convallis.
-      </div>
-      <div class="col-md-4">
-        <img data-src="holder.js/200x300/auto/#666:#444/text:Photo Elodie" alt="Photo">
-      </div>
-    </div>
     <div class="row">
       <div class="col-md-12 article">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas posuere leo libero, vel egestas odio ultrices lacinia. Vestibulum congue, dui varius sollicitudin eleifend, turpis leo aliquam metus, a facilisis magna augue sit amet lacus. Proin ultricies aliquet urna, vitae bibendum augue iaculis eget. Suspendisse ac massa vulputate, venenatis nunc sed, pretium magna. Morbi consequat orci sed rhoncus dictum. Suspendisse gravida quam magna, id pharetra arcu feugiat non. Duis ac consectetur felis, ac sodales tellus. Morbi augue lorem, posuere mollis enim ut, euismod sodales quam. Vivamus cursus magna non dapibus tristique. Pellentesque ac mi quis ante convallis accumsan. Donec rhoncus ut turpis nec feugiat. Duis adipiscing metus eget magna viverra convallis.
+        Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?
+      </div>
+      <div class="col-md-12 article">
+        Mais vous ne parvenez pas à trouver une idée originale pour vos invitations.
+      </div>
+      <div class="col-md-12 article">
+        Je crée pour vous et à votre image des illustrations qui vous ressemblent.
+      </div>
+      <div class="col-md-12 article">
+        Pour cela, il vous suffit de choisir un thème ou une mise en scène et de me faire parvenir une photo de la ou les personnes à représenter.
+      </div>
+      <div class="col-md-12 article">
+        Je réalise pour vous des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.
       </div>
     </div>
   </section>
-  <section id="oeuvres" class="section">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Oeuvres</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 article">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas posuere leo libero, vel egestas odio ultrices lacinia. Vestibulum congue, dui varius sollicitudin eleifend, turpis leo aliquam metus, a facilisis magna augue sit amet lacus. Proin ultricies aliquet urna, vitae bibendum augue iaculis eget. Suspendisse ac massa vulputate, venenatis nunc sed, pretium magna. Morbi consequat orci sed rhoncus dictum. Suspendisse gravida quam magna, id pharetra arcu feugiat non. Duis ac consectetur felis, ac sodales tellus. Morbi augue lorem, posuere mollis enim ut, euismod sodales quam. Vivamus cursus magna non dapibus tristique. Pellentesque ac mi quis ante convallis accumsan. Donec rhoncus ut turpis nec feugiat. Duis adipiscing metus eget magna viverra convallis.
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 article">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas posuere leo libero, vel egestas odio ultrices lacinia. Vestibulum congue, dui varius sollicitudin eleifend, turpis leo aliquam metus, a facilisis magna augue sit amet lacus. Proin ultricies aliquet urna, vitae bibendum augue iaculis eget. Suspendisse ac massa vulputate, venenatis nunc sed, pretium magna. Morbi consequat orci sed rhoncus dictum. Suspendisse gravida quam magna, id pharetra arcu feugiat non. Duis ac consectetur felis, ac sodales tellus. Morbi augue lorem, posuere mollis enim ut, euismod sodales quam. Vivamus cursus magna non dapibus tristique. Pellentesque ac mi quis ante convallis accumsan. Donec rhoncus ut turpis nec feugiat. Duis adipiscing metus eget magna viverra convallis.
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 article">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas posuere leo libero, vel egestas odio ultrices lacinia. Vestibulum congue, dui varius sollicitudin eleifend, turpis leo aliquam metus, a facilisis magna augue sit amet lacus. Proin ultricies aliquet urna, vitae bibendum augue iaculis eget. Suspendisse ac massa vulputate, venenatis nunc sed, pretium magna. Morbi consequat orci sed rhoncus dictum. Suspendisse gravida quam magna, id pharetra arcu feugiat non. Duis ac consectetur felis, ac sodales tellus. Morbi augue lorem, posuere mollis enim ut, euismod sodales quam. Vivamus cursus magna non dapibus tristique. Pellentesque ac mi quis ante convallis accumsan. Donec rhoncus ut turpis nec feugiat. Duis adipiscing metus eget magna viverra convallis.
-      </div>
-    </div>
-  </section>
-  <div class="footer">
-    <p>&copy; Jean Detoeuf</p>
-  </div>
-  <script src="bower_components/holderjs/holder.js"></script>
 </div>
