Adaptation dist Espacement paragraphes accueil

--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -3,15 +3,23 @@
       <div class="col-md-12 article">
         Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?
       </div>
+    </div>
+    <div class="row">
       <div class="col-md-12 article">
         Mais vous ne parvenez pas à trouver une idée originale pour vos invitations.
       </div>
+    </div>
+    <div class="row">
       <div class="col-md-12 article">
         Je crée pour vous et à votre image des illustrations qui vous ressemblent.
       </div>
+    </div>
+    <div class="row">
       <div class="col-md-12 article">
         Pour cela, il vous suffit de choisir un thème ou une mise en scène et de me faire parvenir une photo de la ou les personnes à représenter.
       </div>
+    </div>
+    <div class="row">
       <div class="col-md-12 article">
         Je réalise pour vous des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.
       </div>
