--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -1,7 +1,7 @@
-<div class="container">
-    <div class="row">
+<div class="container" id="accueil">
+    <div class="row" style="margin-top:40px">
       <div class="col-md-12 article">
-        Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?
+        <strong>Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?</strong>
       </div>
     </div>
     <div class="row">
