Tarifs et contacts

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,1 +1,21 @@
-<p>This is the contact view.</p>
+<div class="container">
+    <div class="row" style="margin-top:40px">
+      <div class="col-md-12 article">
+        Par mail : elodie.detoeuf@gmail.com
+      </div>
+    </div>
+    <div class="row" style="margin-top:40px">
+      <div class="col-md-12 article">
+        Par téléphone : 06 03 23 32 46
+      </div>
+    </div>
+    <div class="row" style="margin-top:40px">
+      <div class="col-md-12 article">
+        Par voie postale :
+
+Elodie DETOEUF
+4 Rue Edison
+69003 LYON
+      </div>
+    </div>
+</div>
