--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,1 +1,17 @@
-<p>This is the tarifs view.</p>
+<div class="container">
+    <div class="row" style="margin-top:40px">
+      <div class="col-md-12 article">
+        Une illustration → 200 euros TTC
+      </div>
+    </div>
+    <div class="row" style="margin-top:40px">
+      <div class="col-md-12 article">
+        Deux illustrations → 300 euros TTC
+      </div>
+    </div>
+    <div class="row" style="margin-top:40px">
+      <div class="col-md-12 article">
+        Trois illustrations → 400 euros TTC
+      </div>
+    </div>
+</div>
