--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,21 +1,37 @@
 <div class="container">
-    <div class="row" style="margin-top:40px">
-      <div class="col-md-12 article">
-        Par mail : elodie.detoeuf@gmail.com
-      </div>
-    </div>
-    <div class="row" style="margin-top:40px">
-      <div class="col-md-12 article">
-        Par téléphone : 06 03 23 32 46
-      </div>
-    </div>
-    <div class="row" style="margin-top:40px">
-      <div class="col-md-12 article">
-        Par voie postale :
-
-Elodie DETOEUF
-4 Rue Edison
-69003 LYON
-      </div>
-    </div>
+	<div class="row" style="margin-top:40px">
+		<div class="col-md-12 article">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Par mail</h3>
+				</div>
+				<div class="panel-body">
+					<a href="mailto:elodie.detoeuf@gmail.com">elodie.detoeuf@gmail.com</a>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Par téléphone</h3>
+				</div>
+				<div class="panel-body">
+					06 03 23 32 46
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Par voie postale</h3>
+				</div>
+				<div class="panel-body">
+					Elodie DETOEUF<br/>4 Rue Edison<br/>69003 LYON
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row" style="margin-top:40px">
+		<div class="col-md-12 article">
+			Elodie DETOEUF
+			4 Rue Edison
+			69003 LYON
+		</div>
+	</div>
 </div>
