--- a/app/views/auteur.html
+++ b/app/views/auteur.html
@@ -1,8 +1,7 @@
-<div class="container">
+<div class="container" id="auteur">
 	<div class="row" style="margin-top:40px">
 		<div class="col-md-12 article">
-			<p>Malgré de longues études supérieures et un poste de Clerc d’avocat, ma passion pour le dessin ne m’a jamais quittée.</p>
-			<p>J’ai été élève à l’Ecole supérieure d’art de Grenoble durant 4 années consécutives au cours desquelles, j’ai pu améliorer mes compétences artistiques au travers de cours de dessin, de gravure, d’aquarelle, et d’acrylique.</p>
+			<p>Mon parcours artistique a débuté par une scolarité de 4 années consécutives à l’Ecole supérieure d’art de Grenoble au cours de laquelle j’ai pu améliorer mes compétences au travers de cours de dessin, de gravure, d’aquarelle, d’acrylique ou encore d’arts plastiques.</p>
 			<p>Actuellement, je suis élève aux Ateliers Terre et Feu de Lyon et apprends l’art de la peinture à l’huile au couteau.</p>
 			<p>Aujourd’hui, ma démarche artistique se poursuit parallèlement et essentiellement vers le <strong>dessin numérique</strong> rendu possible grâce à l’utilisation d’une palette graphique.</p>
 			<p>Cet outil me permet de créer des personnages qui vous ressemblent au travers de mises en scène choisies.</p>
