--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="fairePart">
-		<p class="text-center">Mariage de Jean et Elodie</p>
+		<h4 class="text-center">Mariage de Jean et Elodie<h4>
 		<flex-slider slide="s in slidesJeanElodie" animation="slide" slideshow="false">
 			<li>
 				<img ng-src="images/{{s}}">
@@ -8,7 +8,7 @@
 		</flex-slider>
 	</div>
 	<div class="fairePart">
-		<p class="text-center">Mariage de Kevin et Noémie</p>
+		<h4 class="text-center">Mariage de Kevin et Noémie<h4>
 		<flex-slider slide="s in slidesKevinNoemie" animation="slide" slideshow="false">
 			<li>
 				<img ng-src="images/{{s}}">
