--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,31 +1,14 @@
-<div class="container">
+<div class="container" id="tarifs">
+	<div class="row" style="margin-top:40px">
+		<div class="col-md-12">
+			<p>Les tarifs sont dégressifs selon le nombre d’illustrations choisies :</p>
+		</div>
+	</div>
 	<div class="row">
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<div class="caption text-center">
-					<h1>1</h1>
-					<h3>Illustration</h3>
-					<p><h3><span class="label label-default">200 &euro; TTC</span></h3></p>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<div class="caption text-center">
-					<h1>2</h1>
-					<h3>Illustrations</h3>
-					<p><h3><span class="label label-default">300 &euro; TTC</span></h3></p>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				<div class="caption text-center">
-					<h1>3</h1>
-					<h3>Illustrations</h3>
-					<p><h3><span class="label label-default">400 &euro; TTC</span></h3></p>
-				</div>
-			</div>
+		<div class="col-md-10 col-md-offset-2">
+			<p>Une illustration → <u>200 euros TTC</u></p>
+			<p>Deux illustrations → <u>300 euros TTC</u></p>
+			<p>Trois illustrations → <u>400 euros TTC</u></p>
 		</div>
 	</div>
 </div>
