--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="row" style="margin-top:40px">
+	<div class="row">
 		<div class="col-md-12 article">
 			<div class="panel panel-default">
 				<div class="panel-heading">
