--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -1,5 +1,5 @@
-<div class="container" id="accueil">
-    <div class="row" style="margin-top:40px">
+<div class="container texte">
+    <div class="first row">
       <div class="col-md-12 article">
         <strong>Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?</strong>
       </div>
