--- a/app/views/auteur.html
+++ b/app/views/auteur.html
@@ -1,5 +1,5 @@
-<div class="container" id="auteur">
-	<div class="row" style="margin-top:40px">
+<div class="container texte">
+	<div class="first row">
 		<div class="col-md-12 article">
 			<p>Mon parcours artistique a débuté par une scolarité de 4 années consécutives à l’Ecole supérieure d’art de Grenoble au cours de laquelle j’ai pu améliorer mes compétences au travers de cours de dessin, de gravure, d’aquarelle, d’acrylique ou encore d’arts plastiques.</p>
 			<p>Actuellement, je suis élève aux Ateliers Terre et Feu de Lyon et apprends l’art de la peinture à l’huile au couteau.</p>
