Espacement des paragraphes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -154,7 +154,7 @@ div.row{
 }
 
 div.first.row {
-    margin-top:30px
+    margin-top:40px
 }
 
 body {
@@ -167,5 +167,9 @@ div.texte {
 
 nav li {
     cursor: pointer;
+}
+
+p {
+    margin: 0 0 20px;
 }
 
