--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,5 +1,5 @@
 <div class="container texte">
-	<div class="first row">
+	<div class="row">
 		<div class="col-md-12">
 			<p>Les tarifs sont dégressifs selon le nombre d’illustrations choisies :</p>
 		</div>
