--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -1,5 +1,5 @@
 <div class="container texte">
-  <div class="first row">
+  <div class="row">
     <div class="col-md-12 article">
       <p>
         <strong>Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?</strong>
