Société dans contacts

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -22,7 +22,7 @@
 					<h3 class="panel-title">Par voie postale</h3>
 				</div>
 				<div class="panel-body">
-					Elodie DETOEUF<br/>4 Rue Edison<br/>69003 LYON
+					Société A Votre Image<br/>à l'attention d'Elodie Detoeuf<br/>4 Rue Edison<br/>69003 LYON
 				</div>
 			</div>
 		</div>
