Ajout du portrait

--- a/app/views/auteur.html
+++ b/app/views/auteur.html
@@ -1,8 +1,15 @@
 <div class="container texte">
 	<div class="row">
-		<div class="col-md-12 article">
+		<div class="col-md-8 col-xs-6 article">
 			<p>Mon parcours artistique a débuté par une scolarité de 4 années consécutives à l’Ecole supérieure d’art de Grenoble au cours de laquelle j’ai pu améliorer mes compétences au travers de cours de dessin, de gravure, d’aquarelle, d’acrylique ou encore d’arts plastiques.</p>
 			<p>Actuellement, je suis élève aux Ateliers Terre et Feu de Lyon et apprends l’art de la peinture à l’huile au couteau.</p>
+		</div>
+		<div class="col-md-4 col-xs-6">
+			<img class="img-responsive center-block" src="images/portrait.png"/>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 article">
 			<p>Aujourd’hui, ma démarche artistique se poursuit parallèlement et essentiellement vers le <strong>dessin numérique</strong> rendu possible grâce à l’utilisation d’une palette graphique.</p>
 			<p>Cet outil me permet de créer des personnages qui vous ressemblent au travers de mises en scène choisies.</p>
 		</div>
