--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -105,15 +105,6 @@ $navbar-height: 50px;
     font-family: 'Antic Didone', serif;
 }
 
-$banner-height: 200px;
-div.banner {
-  height: $banner-height;
-  margin-left:auto;
-  margin-right:auto;
-  padding-top:20px;
-  margin-bottom:20px;
-}
-
 section{
     margin-bottom: 30px;
     margin-top: -1*$navbar-height;
@@ -156,6 +147,10 @@ p {
     margin-bottom: 30px;
 }
 
+.banner p {
+    font-style: italic;
+}
+
 @media (min-width: $screen-sm-min) {
     .navbar-nav{
         margin: 0 auto;
@@ -163,9 +158,21 @@ p {
         table-layout: fixed;
         float:none;
     }
+    .banner p {
+        font-size: 17px;
+    }
+    $banner-height: 200px;
+    div.banner {
+      height: $banner-height;
+      margin-left:auto;
+      margin-right:auto;
+      padding-top:20px;
+      margin-bottom:20px;
+    }
 }
 
-.banner p {
-    font-style: italic;
-    font-size: 17px;
+@media (max-width: $screen-xs-max) {
+    .banner p {
+        font-size: 10px;
+    }
 }
