--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -167,7 +167,7 @@ p {
       margin-left:auto;
       margin-right:auto;
       padding-top:20px;
-      margin-bottom:20px;
+      margin-bottom:40px;
     }
 }
 
@@ -175,4 +175,9 @@ p {
     .banner p {
         font-size: 10px;
     }
+}
+
+div.medaillon {
+    margin-left:30px;
+    margin-bottom:20px;
 }
