--- a/app/views/accueil.html
+++ b/app/views/accueil.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12 article">
       <p>
-        <strong>Vous vous mariez ? Vous organisez le baptême de votre enfant ? Vous préparez votre anniversaire ou tout autre événement … ?</strong>
+        <strong>Vous vous mariez ? Vous organisez une baby-shower ou un baptême ? Vous préparez votre anniversaire ou tout autre événement … ?</strong>
       </p>
       <p>
         Mais vous ne parvenez pas à trouver une idée originale pour vos invitations.
