Mise à jour du concept

--- a/app/views/concept.html
+++ b/app/views/concept.html
@@ -1,21 +1,15 @@
 <div class="container texte">
   <div class="row">
     <div class="col-md-12 article">
-      <p>
-        <strong>Vous vous mariez ? Vous organisez une baby-shower ou un baptême ? Vous préparez votre anniversaire ou tout autre événement … ?</strong>
-      </p>
-      <p>
-        Mais vous ne parvenez pas à trouver une idée originale pour vos invitations.
-      </p>
-      <p>
-        Je crée pour vous et à votre image des illustrations qui vous ressemblent.
-      </p>
-      <p>
-        Pour cela, il vous suffit de choisir un thème ou une mise en scène et de me faire parvenir une photo de la ou les personnes à représenter.
-      </p>
-      <p>
-        Je réalise pour vous des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.
-      </p>
+      <p><strong>Vous vous mariez ? Vous organisez une baby-shower ou un baptême ? Vous préparez votre anniversaire ou tout autre événement … ?</strong></p>
+      <p>Mais vous ne parvenez pas à trouver une idée originale pour vos invitations.</p>
+      <p>Je crée pour vous et à votre image des illustrations qui vous ressemblent.</p>
+      <p>Voici mon concept en 4 étapes :</p>
+      <p><strong>Etape 1 :</strong> Nous définissons ensemble un projet à partir des personnages à illustrer et du choix de mise en scène.</p>
+      <p><strong>Etape 2 :</strong> Vous me faites parvenir des photographies des protagonistes à représenter afin que je puisse créer des illustrations les plus fidèles possibles.</p>
+      <p><strong>Etape 3 :</strong> Je crée le projet que nous avons prédéfini ensemble.</p>
+      <p><strong>Etape 4 :</strong> Je soumets à votre approbation ma réalisation et apporte si nécessaire les dernières modifications.</p>
+      <p>Je réalise pour vous des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</p>
     </div>
   </div>
 </section>
