Renommage en illustratrice

--- a/app/views/illustratrice.html
+++ b/app/views/illustratrice.html
@@ -1,5 +1,10 @@
 <div class="container texte">
 	<div class="row">
+		<div class="col-md-12">
+			<h1 class="text-center">Elodie Detoeuf</h1>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-md-12 pull-left article">
 			<div class="pull-right medaillon">
 				<img class="img-responsive" src="images/portrait.png"/>
