Correction texte concept

--- a/app/views/concept.html
+++ b/app/views/concept.html
@@ -9,7 +9,7 @@
       <p><strong>Etape 2 :</strong> Vous me faites parvenir des photographies des protagonistes à représenter afin que je puisse créer des illustrations les plus fidèles possibles.</p>
       <p><strong>Etape 3 :</strong> Je crée le projet que nous avons prédéfini ensemble.</p>
       <p><strong>Etape 4 :</strong> Je soumets à votre approbation ma réalisation et apporte si nécessaire les dernières modifications.</p>
-      <p>Je réalise pour vous des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</p>
+      <p>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</p>
     </div>
   </div>
 </section>
