--- a/app/views/illustratrice.html
+++ b/app/views/illustratrice.html
@@ -1,11 +1,15 @@
 <div class="container texte">
 	<div class="row">
+		<div class="col-md-12 nom-illustratrice">
+			<p class="text-center" style="margin-top:0px;">Elodie Detoeuf</p>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-md-12 pull-left article">
 			<div class="pull-right medaillon">
 				<img class="img-responsive" src="images/portrait.png"/>
 			</div>
 			<div>
-				<p style="margin-top:-1em; margin-bottom:10px;"><h2 class="text-center">Elodie Detoeuf</h2></p>
 				<p>Mon parcours artistique a débuté par une scolarité de 4 années consécutives à l’Ecole supérieure d’art de Grenoble au cours de laquelle j’ai pu améliorer mes compétences au travers de cours de dessin, de gravure, d’aquarelle, d’acrylique ou encore d’arts plastiques.</p>
 				<p>Actuellement, je suis élève aux Ateliers Terre et Feu de Lyon et apprends l’art de la peinture à l’huile au couteau.</p>
 				<p>Aujourd’hui, ma démarche artistique se poursuit parallèlement et essentiellement vers le <strong>dessin numérique</strong> rendu possible grâce à l’utilisation d’une palette graphique.</p>
