--- a/app/views/concept.html
+++ b/app/views/concept.html
@@ -10,6 +10,7 @@
       <p><strong>Etape 3 :</strong> Je crée le projet que nous avons prédéfini ensemble.</p>
       <p><strong>Etape 4 :</strong> Je soumets à votre approbation ma réalisation et apporte si nécessaire les dernières modifications.</p>
       <p>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</p>
+      <p>Très bonne visite !</p>
     </div>
   </div>
 </section>
