Mise en forme des tarifs

--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,14 +1,39 @@
 <div class="container texte">
 	<div class="row">
 		<div class="col-md-12">
-			<p>Les tarifs sont dégressifs selon le nombre d’illustrations choisies :</p>
+			<p class="titre text-center">Formules</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-10 col-md-offset-2">
-			<p>Une illustration → <u>200 euros TTC</u></p>
-			<p>Deux illustrations → <u>300 euros TTC</u></p>
-			<p>Trois illustrations → <u>400 euros TTC</u></p>
+		<div class="col-md-4">
+			<div class="panel panel-default text-center">
+				<div class="panel-heading">
+					<h3 class="panel-title"><strong>Coup de crayon</strong></h3>
+				</div>
+				<div class="panel-body">
+					<span>1<br/>illustration<br/>200 &euro;</span>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="panel panel-default text-center">
+				<div class="panel-heading">
+					<h3 class="panel-title"><strong>Coup de pinceau</strong></h3>
+				</div>
+				<div class="panel-body">
+					<span>2<br/>illustrations<br/>300 &euro;</span>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="panel panel-default text-center">
+				<div class="panel-heading">
+					<h3 class="panel-title"><strong>Coup de foudre</strong></h3>
+				</div>
+				<div class="panel-body">
+					<span>3<br/>illustrations<br/>400 &euro;</span>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
