--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -8,12 +8,11 @@
 		<div class="col-md-4" ng-repeat="tarif in tarifs">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
-					<h3 class="panel-title"><strong ng-bind="tarif.nom"/></h3>
+					<h3 class="panel-title"><strong ng-bind="tarif.nom"></strong></h3>
 				</div>
 				<div class="panel-body">
-					<p ng-bind="tarif.nb"/>
-					<p>illustration<ng-pluralize count="tarif.nb" when="{'one': '', 'other': 's'}"/></p>
-					<p><span ng-bind="tarif.prix"/> &euro;</span>
+					<p><span ng-bind="tarif.nb"></span> illustration<ng-pluralize count="tarif.nb" when="{'one': '', 'other': 's'}"/></p>
+					<p><span ng-bind="tarif.prix"></span> &euro;</p>
 				</div>
 			</div>
 		</div>
