--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,19 +1,18 @@
 <div class="container texte">
 	<div class="row">
-		<div class="col-md-12">
-			<p class="titre text-center">Formules</p>
-		</div>
-	</div>
-	<div class="row">
 		<div class="col-md-4" ng-repeat="tarif in tarifs">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
-					<h3 class="panel-title"><strong ng-bind="tarif.nom"></strong></h3>
+					<h3 class="panel-title">Formule<br/><strong ng-bind="tarif.nom"></strong></h3>
 				</div>
 				<div class="panel-body">
-					<p><span ng-bind="tarif.nb"></span> illustration<ng-pluralize count="tarif.nb" when="{'one': '', 'other': 's'}"></ng-pluralize> :</p>
+					<p><span ng-bind="tarif.nb"></span> illustration<ng-pluralize count="tarif.nb" when="{'one': '', 'other': 's'}"></ng-pluralize>* :</p>
 					<p><span ng-bind="tarif.prix"></span> &euro;</p>
 				</div>
 			</div>
+		</div>
+	<div class="row">
+		<div class="col-md-12" style="margin-top:30px">
+			<p class="asterisque">* Une illusatration correspond aux dessins figurant sur une face du support.</p>
 		</div>
 </div>
