--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -3,7 +3,7 @@
 		<div class="col-md-4" ng-repeat="tarif in tarifs">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
-					<h3 class="panel-title">Formule<br/><strong ng-bind="tarif.nom"></strong></h3>
+					<h3 class="panel-title">Formule<br/><span ng-bind="tarif.nom"></span></h3>
 				</div>
 				<div class="panel-body">
 					<p><span ng-bind="tarif.nb"></span> illustration<ng-pluralize count="tarif.nb" when="{'one': '', 'other': 's'}"></ng-pluralize>* :</p>
