Ajout du bapteme de Carla

--- a/app/views/galerie.html
+++ b/app/views/galerie.html
@@ -15,4 +15,12 @@
 			</li>
 		</flex-slider>
 	</div>
+	<div class="fairePart">
+		<h4 class="text-center">Baptème de Carla<h4>
+		<flex-slider slide="s in slidesBaptemeCarla" animation="slide" slideshow="false">
+			<li>
+				<img ng-src="images/{{s}}">
+			</li>
+		</flex-slider>
+	</div>
 </div>
