Réduction du bandeau

--- a/app/views/concept.html
+++ b/app/views/concept.html
@@ -1,6 +1,7 @@
 <div class="container texte">
   <div class="row">
     <div class="col-md-12 article">
+      <p>Bienvenue</p>
       <p><strong>Vous vous mariez ? Vous organisez une baby-shower ou un baptême ? Vous préparez votre anniversaire ou tout autre événement … ?</strong></p>
       <p>Mais vous ne parvenez pas à trouver une idée originale pour vos invitations.</p>
       <p>Je crée pour vous et à votre image des illustrations qui vous ressemblent.</p>
