--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -90,6 +90,12 @@ $navbar-height: 50px;
     border-radius: 0;
     border-width: 0 0 1px;
     z-index:9999;
+    min-height: 41px;
+}
+
+.navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .navbar.affix {
