--- a/app/views/babyshower.html
+++ b/app/views/babyshower.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="fairePart">
-		<h4 class="text-center">Baptème de Carla<h4>
-		<flex-slider slide="s in slidesBaptemeCarla" animation="slide" slideshow="false">
+		<h4 class="text-center">Baby shower de Marlène<h4>
+		<flex-slider slide="s in slidesBabyShower" animation="slide" slideshow="false">
 			<li>
 				<img ng-src="images/{{s}}">
 			</li>
