--- a/app/views/presentation.html
+++ b/app/views/presentation.html
@@ -1,12 +1,16 @@
 <div class="container texte">
   <div class="row">
-    <div class="col-md-12 article">
+    <div class="col-md-5 article">
       <p>Bienvenue,<br/><br/></p>
       <p>Vous vous mariez,</p>
       <p>Vous organisez une baby-shower ou un baptême,</p>
       <p>Vous préparez votre anniversaire ou tout autre événement...</p>
       <p>Mais vous ne parvenez pas à trouver une idée originale pour vos invitations ?<br/><br/></p>
       <p><strong>Je crée pour vous et à votre image des illustrations qui vous ressemblent.</strong><br/><br/></p>
+      <p><strong>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</strong><br/><br/></p>
+      <p>Très bonne visite !</p>
+    </div>
+    <div class="col-md-7">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title text-center">Etape 1</h3>
@@ -39,9 +43,6 @@
           Je soumets à votre approbation ma réalisation et apporte si nécessaire les dernières modifications.
         </div>
       </div>
-      <p><br/></p>
-      <p><strong>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</strong><br/><br/></p>
-      <p>Très bonne visite !</p>
     </div>
   </div>
 </section>
