Texte en plus petit et changement de colonnes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -139,7 +139,7 @@ body {
 }
 
 div.texte {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 nav li {
@@ -180,6 +180,10 @@ div.medaillon {
 
 p.asterisque {
     font-size: 10px;
+}
+
+div.etape {
+    font-size: 60%;
 }
 
 .panel-title {
