--- a/app/views/presentation.html
+++ b/app/views/presentation.html
@@ -1,16 +1,14 @@
 <div class="container texte">
   <div class="row">
-    <div class="col-md-5 article">
-      <p>Bienvenue,<br/><br/></p>
-      <p>Vous vous mariez,</p>
-      <p>Vous organisez une baby-shower ou un baptême,</p>
-      <p>Vous préparez votre anniversaire ou tout autre événement...</p>
-      <p>Mais vous ne parvenez pas à trouver une idée originale pour vos invitations ?<br/><br/></p>
-      <p><strong>Je crée pour vous et à votre image des illustrations qui vous ressemblent.</strong><br/><br/></p>
-      <p><strong>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</strong><br/><br/></p>
+    <div class="col-md-7 article">
+      <p>Bienvenue,</p>
+      <p>Vous vous mariez, vous organisez une baby-shower ou un baptême, vous préparez votre anniversaire ou tout autre événement...</p>
+      <p>Mais vous ne parvenez pas à trouver une idée originale pour vos invitations ?</p>
+      <p><strong>Je crée pour vous et à votre image des illustrations qui vous ressemblent.</strong></p>
+      <p><strong>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</strong></p>
       <p>Très bonne visite !</p>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-5 etape">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title text-center">Etape 1</h3>
