Elargissement de la zone de texte

--- a/app/views/presentation.html
+++ b/app/views/presentation.html
@@ -1,6 +1,6 @@
 <div class="container texte">
   <div class="row">
-    <div class="col-md-7 article">
+    <div class="col-sm-7 article">
       <p>Bienvenue,</p>
       <p>Vous vous mariez, vous organisez une baby-shower ou un baptême, vous préparez votre anniversaire ou tout autre événement...</p>
       <p>Mais vous ne parvenez pas à trouver une idée originale pour vos invitations ?</p>
@@ -8,7 +8,7 @@
       <p><strong>Vous aurez en votre possession des illustrations uniques et personnalisées qui apporteront à votre invitation une touche artistique.</strong></p>
       <p>Très bonne visite !</p>
     </div>
-    <div class="col-md-5 etape">
+    <div class="col-sm-5 etape">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title text-center">Etape 1</h3>
