--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -1,6 +1,6 @@
 <div class="container texte">
 	<div class="row">
-		<div class="col-md-4" ng-repeat="tarif in tarifs">
+		<div class="col-sm-4" ng-repeat="tarif in tarifs">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Formule<br/><span ng-bind="tarif.nom"></span></h3>
@@ -12,7 +12,7 @@
 			</div>
 		</div>
 	<div class="row">
-		<div class="col-md-12" style="margin-top:30px">
-			<p class="asterisque">* Une illusatration correspond aux dessins figurant sur une face du support.</p>
+		<div class="col-sm-12" style="margin-top:30px">
+			<p class="asterisque">* Une illustration correspond aux dessins figurant sur une face du support.</p>
 		</div>
 </div>
