--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-12 article">
+		<div class="col-sm-12 article">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par mail</h3>
