--- a/app/views/illustratrice.html
+++ b/app/views/illustratrice.html
@@ -1,6 +1,6 @@
 <div class="container texte">
  	<div class="row">
-		<div class="col-md-8 article">
+		<div class="col-sm-8 article">
 			<div>
 				<p>Mon parcours artistique a débuté par une scolarité de 4 années consécutives à l’Ecole supérieure d’art de Grenoble au cours de laquelle j’ai pu améliorer mes compétences au travers de cours de dessin, de gravure, d’aquarelle, d’acrylique ou encore d’arts plastiques.</p>
 				<p>Actuellement, je poursuis ma formation artistique à Lyon.</p>
@@ -8,7 +8,7 @@
 				<p>Cet outil me permet de créer des personnages qui vous ressemblent au travers de mises en scène choisies.</p>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-sm-4">
 			<div class="pull-right medaillon">
 				<img class="img-responsive" src="images/portrait.png"/>
 			</div>
