Centrage des informations de contact

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-12 article">
-			<div class="panel panel-default">
+		<div class="col-sm-offset-3 col-sm-6 article">
+			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par mail</h3>
 				</div>
@@ -9,7 +9,7 @@
 					<a href="mailto:elodie.detoeuf@gmail.com">elodie.detoeuf@gmail.com</a>
 				</div>
 			</div>
-			<div class="panel panel-default">
+			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par téléphone</h3>
 				</div>
@@ -17,7 +17,7 @@
 					06 03 23 32 46
 				</div>
 			</div>
-			<div class="panel panel-default">
+			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par voie postale</h3>
 				</div>
